--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <header>
       <h1 class="page-title">Taskinator</h1>
       <p>Click the button below to add a nw task!</p>
-      <button class="btn">Add Task</button>
+      <button id="save-task" class="btn">Add Task</button>
     </header>
 
     <main class="page-content">
       <section class="task-list-wrapper">
         <h2 class="list-title">Tasks To Do</h2>
-        <ul class="task-list">
+        <ul id="tasks-to-do" class="task-list">
           <li class="task-item">A task is going to be adfded soon!</li>
         </ul>
       </section>
@@ -26,6 +26,6 @@
 
     <footer>&copy;2020 by Taskinator</footer>
 
-    <script src="./assets/js/scripts.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
