--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <h1 class="page-title">Taskinator</h1>
       <p>Click the button below to add a new task!</p>
-      <form action="" id="task-form">
+      <form id="task-form">
         <div class="form-group">
           <input type="text" name="task-name" placeholder="Enter Task Name" />
         </div>
@@ -30,7 +30,7 @@
       </form>
     </header>
 
-    <main class="page-content">
+    <main id="page-content" class="page-content">
       <!-- TASKS TO DO SECTION -->
       <section class="task-list-wrapper">
         <h2 class="list-title">Tasks To Do</h2>
